--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 description = "project for research town"
 license = "Apache 2.0 License"
 readme = "README.md"
-
+authors =['Authors of ResearchTown']
 
 [tool.poetry.dependencies]
 python = ">=3.8, <3.12"
